kubernetes/components/knative-ns/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: analytics-for-spotify
  namespace: knative-serving
  labels:
    app.kubernetes.io/instance: analytics-for-spotify_analytics-for-spotify
spec:
  ingressClassName: openshift-default
  tls:
    - hosts:
        - spotify.arthurvardevanyan.com
      secretName: analytics-for-spotify-cert
  rules:
    - host: spotify.arthurvardevanyan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kourier
                port:
                  number: 80
